@startuml

hide circle
skinparam classAttributeIconSize 0

class InterfazGrafica {
    +{static} TECLA_ARRIBA:int
    +{static} TECLA_IZQUIERDA:int
    +{static} TECLA_DERECHA:int
    +{static} TECLA_R:int
    +leeTeclaPulsada():int
    +colocaImagen(archivo:String, fila:int, col:int)
}

class ControlJuego {
    -nivelEnJuego:int
    +redibujaNivelActual()
    +partida()
    +cargaNiveles()
}

class Nivel {
    -filas:int
    -columnas:int
    -datosMap:char[][]
    +inicializar()
    +getCelda(f:int, c:int):Celda
    +mueveCabeza()
}

abstract class "Celda\n{abstract}" as Celda {
    #fila:int
    #columna:int
    +getFila():int
    +getColumna():int
    +{abstract}intentaPasar(df:int, dc:int):int
    +{abstract}getImagen():String
}

class Cabeza {
    -altura:int
    +isLimiteAltura():boolean
    +actualizaPosicion(df:int, dc:int)
}

class DatosNiveles {
    +{static} MAPAS char[][][]
}

ControlJuego .up.> DatosNiveles

ControlJuego -left-> InterfazGrafica : gui
ControlJuego -down-> "1..*" Nivel : niveles

Celda -up-> Nivel
note right on link
    subclases de Celda
    deberán poder ver su
    relación hacia Nivel
end note

Nivel *-down-> "15x19" Celda

Celda <|-- Cabeza
Celda <|-- Caja
Celda <|-- Cuerpo
Celda <|-- Manzana
Celda <|-- Pared

@enduml